--- a/p8105_hw2_mk4208.md
+++ b/p8105_hw2_mk4208.md
@@ -119,14 +119,14 @@ pols = read_csv("./Data/fivethirtyeight_datasets/pols-month.csv") %>%
     c("year", "month", "day"), 
     convert = TRUE) %>% 
   mutate(prez_dem = recode(prez_dem, '1' = "dem")) %>% 
-  mutate(prez_gop = recode(prez_gop, '1' = "gop")) %>% 
+  mutate(prez_gop = recode(prez_gop, '1' = "gop", '2' = "gop")) %>% 
   pivot_longer(
-    c("prez_dem", "prez_gop"), 
+    cols = c("prez_dem", "prez_gop"), 
     values_to = "president", 
     values_drop_na = TRUE
   ) %>% 
   mutate(month = month.name[month]) %>% 
-  select(-day)
+  select(-day, -name)
 ```
 
     ## Parsed with column specification:
@@ -150,10 +150,10 @@ pols = read_csv("./Data/fivethirtyeight_datasets/pols-month.csv") %>%
 
 ##### Here is a short description of the dataset:
 
-  - There are **817 observations** and **10 columns**.
+  - There are **822 observations** and **9 columns**.
   - The range of years is from **1947 to 2015**.
   - It contains the following variables: **year, month, gov\_gop,
-    sen\_gop, rep\_gop, gov\_dem, sen\_dem, rep\_dem, name, president**.
+    sen\_gop, rep\_gop, gov\_dem, sen\_dem, rep\_dem, president**.
 
 ### For the `snp` dataset:
 
@@ -244,11 +244,11 @@ merged_data = pols %>%
 
 ###### For the merged dataset:
 
-  - There are **817 observations** and **13 columns**.
+  - There are **822 observations** and **12 columns**.
   - The range of years is from **1947 to 2015**.
   - It contains the following variables: **year, month, gov\_gop,
-    sen\_gop, rep\_gop, gov\_dem, sen\_dem, rep\_dem, name, president,
-    day, close, rate**.
+    sen\_gop, rep\_gop, gov\_dem, sen\_dem, rep\_dem, president, day,
+    close, rate**.
 
 # Problem 3:
 
