--- a/p8105_hw2_mk4208.md
+++ b/p8105_hw2_mk4208.md
@@ -7,20 +7,6 @@ Meeraj Kothari
 
 ``` r
 library(tidyverse)
-```
-
-    ## ── Attaching packages ─────────────────────────────────────────────────────────── tidyverse 1.2.1 ──
-
-    ## ✔ ggplot2 3.2.1     ✔ purrr   0.3.2
-    ## ✔ tibble  2.1.3     ✔ dplyr   0.8.3
-    ## ✔ tidyr   1.0.0     ✔ stringr 1.4.0
-    ## ✔ readr   1.3.1     ✔ forcats 0.4.0
-
-    ## ── Conflicts ────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
-    ## ✖ dplyr::filter() masks stats::filter()
-    ## ✖ dplyr::lag()    masks stats::lag()
-
-``` r
 library(readxl)
 ```
 
@@ -92,8 +78,6 @@ precipitation_full = full_join(precipitation_2017, precipitation_2018) %>%
   mutate(month = month.name[month])
 ```
 
-    ## Joining, by = c("month", "total", "year")
-
 ## Here is a short description of the dataset:
 
 ###### For the precipitation dataset:
@@ -129,19 +113,6 @@ pols = read_csv("./Data/fivethirtyeight_datasets/pols-month.csv") %>%
   select(-day, -name)
 ```
 
-    ## Parsed with column specification:
-    ## cols(
-    ##   mon = col_date(format = ""),
-    ##   prez_gop = col_double(),
-    ##   gov_gop = col_double(),
-    ##   sen_gop = col_double(),
-    ##   rep_gop = col_double(),
-    ##   prez_dem = col_double(),
-    ##   gov_dem = col_double(),
-    ##   sen_dem = col_double(),
-    ##   rep_dem = col_double()
-    ## )
-
     ## Warning: Unreplaced values treated as NA as .x is not compatible. Please
     ## specify replacements exhaustively or supply .default
     
@@ -170,12 +141,6 @@ snp = read_csv("./Data/fivethirtyeight_datasets/snp.csv") %>%
   select(year, month, -day, everything())
 ```
 
-    ## Parsed with column specification:
-    ## cols(
-    ##   date = col_character(),
-    ##   close = col_double()
-    ## )
-
 ##### Here is a short description of the dataset:
 
   - There are **787 observations** and **4 columns**.
@@ -195,28 +160,11 @@ unemployment = read_csv("./Data/fivethirtyeight_datasets/unemployment.csv") %>%
     names_to = "month",
     values_to = "rate"
   ) %>% 
-  mutate(month = match(month, month.abb)) %>% 
+  mutate(month = match(month, month.abb)) %>%
   mutate(month = month.name[month]) %>%
   mutate(Year = as.integer(Year)) %>%
   janitor::clean_names()
 ```
-
-    ## Parsed with column specification:
-    ## cols(
-    ##   Year = col_double(),
-    ##   Jan = col_double(),
-    ##   Feb = col_double(),
-    ##   Mar = col_double(),
-    ##   Apr = col_double(),
-    ##   May = col_double(),
-    ##   Jun = col_double(),
-    ##   Jul = col_double(),
-    ##   Aug = col_double(),
-    ##   Sep = col_double(),
-    ##   Oct = col_double(),
-    ##   Nov = col_double(),
-    ##   Dec = col_double()
-    ## )
 
 ##### Here is a short description of the dataset:
 
@@ -232,12 +180,9 @@ The following code chunk merges `snp` into `pols` and then
 ``` r
 merged_data = pols %>% 
   left_join(snp, 
-    by = c("year", "month") 
-  ) %>% 
-  left_join(
-    unemployment,
-    by = c("year", "month")
-    )
+            by = c("year", "month")) %>%
+  left_join(unemployment, 
+            by = c("year", "month"))
 ```
 
 ##### Here is a short description of the dataset:
@@ -267,16 +212,6 @@ popular_baby_names = read_csv("./Data/Popular_Baby_Names.csv") %>%
          gender = str_to_lower(gender)) %>% 
   distinct()
 ```
-
-    ## Parsed with column specification:
-    ## cols(
-    ##   `Year of Birth` = col_double(),
-    ##   Gender = col_character(),
-    ##   Ethnicity = col_character(),
-    ##   `Child's First Name` = col_character(),
-    ##   Count = col_double(),
-    ##   Rank = col_double()
-    ## )
 
 Following table shows the rank in popularity of the name “Olivia” as a
 female baby name over time. Rows contain ethnicities and columns contain
