--- a/p8105_hw2_mk4208.Rmd
+++ b/p8105_hw2_mk4208.Rmd
@@ -87,7 +87,7 @@ precipitation_full = full_join(precipitation_2017, precipitation_2018) %>%
 The month variable is separated into "year", "month" and "day". A new variable "President" has been added taking values from prez_dem and prez_gop. The values of the month variable have been converted to characters. Day variable has been removed. 
 
 
-```{r message=FALSE}
+```{r message=FALSE, warning=FALSE}
 pols = read_csv("./Data/fivethirtyeight_datasets/pols-month.csv") %>% 
   separate(mon,
     c("year", "month", "day"), 
